# HW6

./: CMakeLists.txt  HW6_main.c  README.md  mpu6050.c  mpu6050.h  settings.json  tusb_config.h  usb_descriptors.c  usb_descriptors.h
